[package]
name = "windows-ctl"
version = "0.1.0"
edition = "2021"

[dependencies]
cab = { version = "0.4.1", optional = true }
der = { git = "https://github.com/smndtrl/formats", branch = "pkcs7", features = ["std", "derive", "oid"] }
hex = "0.4"
thiserror = "1.0"
pkcs7 = { git = "https://github.com/smndtrl/formats", branch = "pkcs7" }
spki = { git = "https://github.com/smndtrl/formats", branch = "pkcs7" }
x509-cert = { git = "https://github.com/smndtrl/formats", branch = "pkcs7" }
