[package]
name = "ctltool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cab = "0.4"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
windows-ctl = { path = "../windows-ctl", features = ["serde"]}
indicatif = "0.17"
x509-cert = { git = "https://github.com/RustCrypto/formats", branch = "master", features = ["pem"]}
pem-rfc7468 = { git = "https://github.com/RustCrypto/formats", branch = "master", features = ["std"]}
