[package]
name = "ctltool"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cab = "0.4"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
windows-ctl = { path = "../windows-ctl", features = ["serde"]}
indicatif = "0.17"
x509-cert = { version = "0.2.0-pre.0", features = ["pem", "std"]}
pem-rfc7468 = { version = "0.7.0", features = ["std"]}
