[package]
name = "ctltool"
description = "A command line utility for inspecting and interacting with Windows CTLs"
repository = "https://github.com/trailofbits/windows-ctl"
readme = "../README.md"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cab = "0.4"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
windows-ctl = { path = "../windows-ctl", version = "0.1.0", features = ["serde"]}
indicatif = "0.17"
x509-cert = { version = "0.2.0-pre.0", features = ["pem", "std"]}
pem-rfc7468 = { version = "0.7.0", features = ["std"]}
