[package]
name = "windows-ctl"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
der = { git = "https://github.com/RustCrypto/formats", branch = "master", features = ["std", "derive", "oid"] }
hex = { version = "0.4", optional = true }
itertools = "0.10"
thiserror = "1.0"
pkcs7 = { git = "https://github.com/RustCrypto/formats", branch = "master" }
spki = { git = "https://github.com/RustCrypto/formats", branch = "master" }
x509-cert = { git = "https://github.com/RustCrypto/formats", branch = "master" }
serde = { version = "1.0", optional = true }

[features]
serde = ["dep:serde", "dep:hex"]
