[package]
name = "windows-ctl"
description = "A crate for parsing Windows Certificate Trust Lists"
repository = "https://github.com/trailofbits/windows-ctl"
readme = "../README.md"
license = "Apache-2.0"
version = "0.1.2"
edition = "2021"

[dependencies]
der = { version = "0.7.1", features = ["std", "derive", "oid"] }
hex = { version = "0.4", optional = true }
itertools = "0.13"
thiserror = "1.0"
pkcs7 = { version = "0.4.0-pre.1" }
spki = { version = "0.7.0" }
x509-cert = { version = "0.2.0-pre.0" }
serde = { version = "1.0", optional = true }

[features]
serde = ["dep:serde", "dep:hex"]
